# Generated by Django 6.0.3 on 2026-04-27 22:26

import uuid

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ("business", "0001_initial"),
    ]

    operations = [
        migrations.CreateModel(
            name="Document",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                ("file_name", models.CharField(max_length=500)),
                ("storage_path", models.CharField(max_length=1000)),
                (
                    "status",
                    models.CharField(
                        choices=[
                            ("Pendiente", "Pendiente"),
                            ("Procesado", "Procesado"),
                            ("Error", "Error"),
                        ],
                        default="Pendiente",
                        max_length=50,
                    ),
                ),
                (
                    "doc_type",
                    models.CharField(
                        choices=[
                            ("Factura", "Factura"),
                            ("Gasto", "Gasto"),
                            ("Ingreso", "Ingreso"),
                        ],
                        max_length=50,
                    ),
                ),
                ("uploaded_at", models.DateTimeField(auto_now_add=True)),
                (
                    "business",
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="documents",
                        to="business.business",
                    ),
                ),
            ],
            options={
                "db_table": "documents",
            },
        ),
        migrations.CreateModel(
            name="InvoiceData",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4,
                        editable=False,
                        primary_key=True,
                        serialize=False,
                    ),
                ),
                (
                    "supplier_name",
                    models.CharField(blank=True, max_length=255, null=True),
                ),
                (
                    "supplier_tax_id",
                    models.CharField(blank=True, max_length=100, null=True),
                ),
                ("issue_date", models.DateField(blank=True, null=True)),
                (
                    "tax_base",
                    models.DecimalField(
                        blank=True, decimal_places=2, max_digits=12, null=True
                    ),
                ),
                (
                    "tax_rate",
                    models.DecimalField(
                        blank=True, decimal_places=2, max_digits=5, null=True
                    ),
                ),
                (
                    "total_amount",
                    models.DecimalField(
                        blank=True, decimal_places=2, max_digits=12, null=True
                    ),
                ),
                ("currency", models.CharField(default="EUR", max_length=10)),
                (
                    "document",
                    models.OneToOneField(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name="invoice_data",
                        to="documents.document",
                    ),
                ),
            ],
            options={
                "db_table": "invoice_data",
            },
        ),
    ]
